use configuration API + add support for ALL-MODULE-PATH