@@ -24,7 +24,9 @@
 /*
  * @test
  * @library /test/lib ./cases/modules
- * @build JScanTestBase org.singlejar/* org.lib/* org.myapp/* cases.classpath.singlejar.main.Main
+ * @build JScanTestBase
+ *     org.singlejar/* org.lib/* org.myapp/*
+ *     cases.classpath.singlejar.main.Main
  * @run testng TestPrintNativeAccess
  */
 
@@ -77,6 +79,17 @@ class TestPrintNativeAccess extends JScanTestBase {
     @Test
     public void testWithDepModule() {
         assertSuccess(jscanRestricted("--module-path", ".", "--dump-all", "--add-modules", "org.myapp"))
+                .stderrShouldBeEmpty()
+                .stdoutShouldContain("org.lib")
+                .stdoutShouldContain("org.lib.Lib")
+                .stdoutShouldContain("org.lib.Lib::m()void is a native method declaration")
+                .stdoutShouldContain("org.lib.Lib::doIt()void references restricted methods")
+                .stdoutShouldContain("java.lang.foreign.MemorySegment::reinterpret(long)MemorySegment");
+    }
+
+    @Test
+    public void testAllModulePath() {
+        assertSuccess(jscanRestricted("--module-path", ".", "--dump-all", "--add-modules", "ALL-MODULE-PATH"))
                 .stderrShouldBeEmpty()
                 .stdoutShouldContain("org.lib")
                 .stdoutShouldContain("org.lib.Lib")
